testsuite/tests/ghc-regress/typecheck/should_compile/T2846.hs
{-# LANGUAGE ImpredicativeTypes, FlexibleContexts #-}
module T2846 where

x = [1,2,3] :: [Num a => a]
